--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <div class="col-md-3 text-center">
                     <div class="card p-4 h-100 border-0 shadow-sm">
                         <div class="placeholder-image rounded-circle mx-auto"></div>
-                        <h5 class="mt-3">Anna Kowalska</h5>
+                        <h5 class="mt-3">Michał Kowalski</h5>
                         <p>CEO – Wizjonerka i liderka, która buduje strategię rozwoju naszych usług.</p>
                     </div>
                 </div>
