--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <div class="col-md-3 text-center">
                     <div class="card p-4 h-100 border-0 shadow-sm">
                         <div class="placeholder-image rounded-circle mx-auto"></div>
-                        <h5 class="mt-3">Jan Nowak</h5>
+                        <h5 class="mt-3">Dawid Nowak</h5>
                         <p>CTO – Odpowiada za technologię i innowacje w naszych projektach.</p>
                     </div>
                 </div>
