--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Outsourcing IT - Twoi Specjaliści na Żądanie</title>
+    <title>Outsourcing IT - Programiści, PM, Analitycy Biznesowi i Systemowi</title>
+    <meta name="description" content="Outsourcing IT dopasowany do Twoich potrzeb. Oferujemy doświadczonych specjalistów: programistów, project managerów, analityków biznesowych i systemowych. Skorzystaj z ekspertów na żądanie.">
+    <meta name="keywords" content="outsourcing IT, programiści, project manager, analityk biznesowy, analityk systemowy, IT na żądanie">
+    <meta name="author" content="Outsourcing IT">
+    <meta property="og:title" content="Outsourcing IT - Twoi Specjaliści na Żądanie">
+    <meta property="og:description" content="Profesjonalny outsourcing IT. Programiści, PM, analitycy biznesowi i systemowi dostępni wtedy, gdy ich potrzebujesz.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://costutrzebawymyslec.pl/">
+    <!--<meta property="og:image" content="hhttps://costutrzebawymyslec.pl/images/miniatura.jpg">-->
+    <!--<meta name="twitter:card" content="summary_large_image">-->
+    <meta name="twitter:title" content="Outsourcing IT - Twoi Specjaliści na Żądanie">
+    <meta name="twitter:description" content="Outsourcing IT dopasowany do Twoich potrzeb. Programiści, PM, analitycy biznesowi i systemowi.">
+    <!--<meta name="twitter:image" content="https://costutrzebawymyslec.pl/images/miniatura.jpg">-->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 </head>
