--- a/index.html
+++ b/index.html
@@ -50,23 +50,35 @@
 
     <!-- O nas i misja -->
     <section id="about" class="py-7 bg-light">
-        <div class="container">
-            <div class="row align-items-center g-5">
-                <div class="col-lg-6">
-                    <h2 class="fw-bold mb-3">Kim jesteśmy?</h2>
-                    <p class="lead">Łączymy firmy z ekspertami IT, którzy potrafią przekształcić wizję w działające rozwiązania. Nasza misja to uproszczenie procesu rozwoju technologicznego – bez barier rekrutacyjnych, bez strat czasu, bez kompromisów jakościowych.</p>
-                    <ul class="list-unstyled mt-4">
-                        <li>✔ Skupiasz się na swoim biznesie – my dbamy o zespół.</li>
-                        <li>✔ Otrzymujesz dopasowanych specjalistów – gotowych od zaraz.</li>
-                        <li>✔ Płacisz tylko za rzeczywistą wartość, jaką wnoszą eksperci.</li>
-                    </ul>
-                </div>
-                <div class="col-lg-6 text-center">
-                    <div class="placeholder-image rounded"></div>
-                </div>
+    <div class="container">
+        <div class="row align-items-center g-5">
+            <div class="col-lg-6">
+                <h2 class="fw-bold mb-3">Kim jesteśmy i jak pomożemy Twojej firmie?</h2>
+                <p class="lead">
+                    Jesteśmy Twoim partnerem w cyfrowej transformacji — dostarczamy wykwalifikowanych specjalistów IT, którzy błyskawicznie wesprą Twoje projekty i pozwolą skupić się na tym, co najważniejsze: rozwoju biznesu.
+                </p>
+                <p>
+                    Dzięki naszemu outsourcingowi IT zyskujesz:
+                </p>
+                <ul class="list-unstyled mt-4">
+                    <li>✔ <strong>Elastyczność zatrudnienia:</strong> Zatrudniasz tylko tyle osób, ile naprawdę potrzebujesz, bez długotrwałych procesów rekrutacyjnych i kosztów stałych.</li>
+                    <li>✔ <strong>Błyskawiczne wsparcie:</strong> Nasi specjaliści są gotowi do działania od pierwszego dnia – bez opóźnień i przestojów.</li>
+                    <li>✔ <strong>Gwarancja jakości:</strong> Dobieramy ekspertów dokładnie do Twoich wymagań, zapewniając najwyższe standardy pracy i komunikacji.</li>
+                    <li>✔ <strong>Oszczędność czasu i pieniędzy:</strong> Eliminujesz koszty związane z rekrutacją, szkoleniami i zwolnieniami, płacąc tylko za realne efekty.</li>
+                    <li>✔ <strong>Pełne wsparcie projektowe:</strong> Oferujemy specjalistów nie tylko do programowania, ale także do zarządzania projektami, analizy biznesowej i systemowej – dzięki temu Twój projekt zawsze idzie zgodnie z planem.</li>
+                    <li>✔ <strong>Skalowalność:</strong> W miarę rozwoju firmy szybko zwiększysz lub zmniejszysz zespół bez zbędnych formalności.</li>
+                    <li>✔ <strong>Bezpieczeństwo i poufność:</strong> Dbamy o ochronę danych i zachowanie najwyższych standardów bezpieczeństwa w każdej współpracy.</li>
+                </ul>
+                <p class="mt-4">
+                    Współpraca z nami to gwarancja, że technologia stanie się Twoim sprzymierzeńcem, a nie przeszkodą. Z nami szybko wdrożysz innowacje i osiągniesz przewagę na rynku.
+                </p>
+            </div>
+            <div class="col-lg-6 text-center">
+                <div class="placeholder-image rounded"></div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Statystyki -->
     <section class="stats text-center py-7">
