style kolory plus nowa sekcja jak dzialamy

--- a/index.html
+++ b/index.html
@@ -128,8 +128,38 @@
         </div>
     </section>
 
+<!-- jak działmy-->
+    <section class="py-7 bg-light">
+  <div class="container">
+    <h2 class="text-center fw-bold mb-5">Jak działa nasz outsourcing IT?</h2>
+    <div class="row g-4">
+      <div class="col-md-3 text-center">
+        <div class="step-number display-4 fw-bold text-primary mb-3">1</div>
+        <h5>Analiza potrzeb</h5>
+        <p>Wspólnie ustalamy zakres projektu oraz wymagania dotyczące zespołu IT.</p>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="step-number display-4 fw-bold text-primary mb-3">2</div>
+        <h5>Dobór ekspertów</h5>
+        <p>Wybieramy specjalistów idealnie dopasowanych do Twoich potrzeb i kultury firmy.</p>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="step-number display-4 fw-bold text-primary mb-3">3</div>
+        <h5>Start projektu</h5>
+        <p>Nasi eksperci rozpoczynają pracę nad Twoim projektem, dostarczając szybkie i efektywne rozwiązania.</p>
+      </div>
+      <div class="col-md-3 text-center">
+        <div class="step-number display-4 fw-bold text-primary mb-3">4</div>
+        <h5>Stałe wsparcie</h5>
+        <p>Zapewniamy monitoring, wsparcie i elastyczne skalowanie zespołu w trakcie trwania projektu.</p>
+      </div>
+    </div>
+  </div>
+</section>
+
+
     <!-- Oferta -->
-    <section id="services" class="py-7 bg-light">
+    <section id="services" class="py-7">
         <div class="container">
             <h2 class="text-center fw-bold mb-5">Specjaliści, których dostarczamy</h2>
             <div class="row g-4">
@@ -162,7 +192,7 @@
     </section>
 
     <!-- Opinie klientów -->
-    <section class="py-7">
+    <section class="py-7 bg-light">
         <div class="container">
             <h2 class="text-center fw-bold mb-5">Co mówią nasi klienci?</h2>
             <div id="carouselTestimonials" class="carousel slide" data-bs-ride="carousel">
@@ -193,7 +223,7 @@
     </section>
 
     <!-- Zespół -->
-    <section id="team" class="py-7 bg-light">
+    <section id="team" class="py-7">
         <div class="container">
             <h2 class="text-center fw-bold mb-5">Poznaj nasz zespół</h2>
             <div class="row g-4">
@@ -230,7 +260,7 @@
     </section>
 
 <!-- Kontakt -->
-<section id="contact" class="py-7 contact-section">
+<section id="contact" class="py-7 contact-section bg-light">
   <div class="container">
     <h2 class="text-center fw-bold mb-5">Skontaktuj się z nami</h2>
     <div class="row align-items-center g-5">
