style - jak dzialamy - punktatory

--- a/index.html
+++ b/index.html
@@ -129,27 +129,39 @@
     </section>
 
 <!-- jak działmy-->
-    <section class="py-7 bg-light">
+<section class="py-7 bg-light">
   <div class="container">
     <h2 class="text-center fw-bold mb-5">Jak działa nasz outsourcing IT?</h2>
     <div class="row g-4">
       <div class="col-md-3 text-center">
-        <div class="step-number display-4 fw-bold text-primary mb-3">1</div>
+        <div class="step-number d-flex align-items-center justify-content-center mb-3">
+          <span class="step-circle me-2"></span>
+          <span class="step-digit">1</span>
+        </div>
         <h5>Analiza potrzeb</h5>
         <p>Wspólnie ustalamy zakres projektu oraz wymagania dotyczące zespołu IT.</p>
       </div>
       <div class="col-md-3 text-center">
-        <div class="step-number display-4 fw-bold text-primary mb-3">2</div>
+        <div class="step-number d-flex align-items-center justify-content-center mb-3">
+          <span class="step-circle me-2"></span>
+          <span class="step-digit">2</span>
+        </div>
         <h5>Dobór ekspertów</h5>
         <p>Wybieramy specjalistów idealnie dopasowanych do Twoich potrzeb i kultury firmy.</p>
       </div>
       <div class="col-md-3 text-center">
-        <div class="step-number display-4 fw-bold text-primary mb-3">3</div>
+        <div class="step-number d-flex align-items-center justify-content-center mb-3">
+          <span class="step-circle me-2"></span>
+          <span class="step-digit">3</span>
+        </div>
         <h5>Start projektu</h5>
         <p>Nasi eksperci rozpoczynają pracę nad Twoim projektem, dostarczając szybkie i efektywne rozwiązania.</p>
       </div>
       <div class="col-md-3 text-center">
-        <div class="step-number display-4 fw-bold text-primary mb-3">4</div>
+        <div class="step-number d-flex align-items-center justify-content-center mb-3">
+          <span class="step-circle me-2"></span>
+          <span class="step-digit">4</span>
+        </div>
         <h5>Stałe wsparcie</h5>
         <p>Zapewniamy monitoring, wsparcie i elastyczne skalowanie zespołu w trakcie trwania projektu.</p>
       </div>
